# schematic-explorer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  extract_tower.py  pyproject.toml  test_verification.py
.convext/: config.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
output-backups/: Hard Schematic.html  Hard Schematic_insights.txt  Medium B Schematic.html  Medium B Schematic.json  Medium B Schematic_insights.txt  Medium Schematic.html  Medium Schematic_insights.txt  Sample Tower BC.html  Sample Tower BC.json  Sample Tower BC_insights.txt  Sample Tower SM.html  Sample Tower SM.json  Sample Tower SM_insights.txt  Simple Schematic.html  Simple Schematic.json  Simple Schematic_insights.txt  Super Hard Schematic.html  Super Hard Schematic.json  Super Hard Schematic_insights.txt
src/schematic_explorer/: __init__.py  blocks.py  carriers.py  carriers.yml  extractor.py  preflight.py  proximity.py  scoring.py  types.py  utils.py  verify.py
src/schematic_explorer/verify/: __init__.py  core.py  formatting.py  gemini.py  layer_check.py  prompts.py
tests/: __init__.py  conftest.py  test_carriers.py  test_extractor.py  test_preflight.py  test_scoring.py  test_types.py  test_utils.py  test_verify.py
tower_extractor/: __init__.py  extract.py  extract_adaptive.py  models.py  verify.py
viewer/: package.json  pnpm-lock.yaml  vite.config.ts
viewer/src/: App.css  App.tsx  api.ts  test-setup.ts  test-utils.ts  types.ts  utils.test.ts  utils.ts
viewer/src/components/: FileList.test.tsx  FileList.tsx  Icons.test.tsx  Icons.tsx  InsightsSidebar.test.tsx  InsightsSidebar.tsx  MainContent.test.tsx  MainContent.tsx  ResizablePanel.tsx  index.ts
viewer/src/hooks/: index.ts  useFiles.ts  useTheme.ts
