[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schematic-explorer"
version = "0.1.0"
description = "Extract insurance tower schematic data from Excel files using Claude AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Arqu", email = "dev@arqu.co" }
]
keywords = ["insurance", "excel", "extraction", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/arqu-co/schematic-explorer"
Repository = "https://github.com/arqu-co/schematic-explorer"

[tool.hatch.build.targets.wheel]
packages = ["src/schematic_explorer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
