[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schematic-explorer"
version = "0.1.0"
description = "Extract insurance tower schematic data from Excel files using Claude AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Arqu", email = "dev@arqu.co" }
]
keywords = ["insurance", "excel", "extraction", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/arqu-co/schematic-explorer"
Repository = "https://github.com/arqu-co/schematic-explorer"

[tool.hatch.build.targets.wheel]
packages = ["src/schematic_explorer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (python 3.10+)
    "SIM102", # use single if statement (nested ifs often more readable)
    "SIM103", # return condition directly (explicit returns more readable)
    "SIM108", # use ternary operator instead of if-else
    "ARG001", # unused function argument (often needed for API compatibility)
    "F841",   # local variable assigned but never used (sometimes intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["schematic_explorer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
